[tool.poetry]
name = "stable-diffusion"
version = "0.1.0"
description = ""
authors = ["Shrihari-Nair <shriharinair@htic.iitm.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
numpy = "^1.26.4"
transformers = "^4.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
