[tool.poetry]
name = "stable-diffusion"
version = "0.1.0"
description = ""
authors = ["Shrihari-Nair <shriharinair@htic.iitm.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
numpy = "^1.26.4"
transformers = "^4.41.1"
pillow = "^10.3.0"
lightning = "^2.2.5"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
